--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.16",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -29,14 +30,18 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.2.0",
     "@nestjs/platform-socket.io": "^9.2.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/websockets": "^9.2.0",
+    "aws-sdk": "^2.1258.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "nest-aws-sdk": "^3.0.0",
     "nest-winston": "^1.8.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
