chore: add worker scripts to package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "worker:start": "nest start --watch --config nest-cli-worker.json",
+    "worker:prod": "node dist/src/worker/worker"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.16",
