--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^6.7.2",
     "nest-aws-sdk": "^3.0.0",
     "nest-winston": "^1.8.0",
+    "p-queue": "^7.3.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
