--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,8 @@ GOOGLE_MAPS_API_KEY=XXX
 API_PORT=3333
 API_URL=http://localhost
 
+REDIS_PORT=6379
+REDIS_HOST='localhost'
 
 JWT_SECRET=1839DJJQZSZ091203
 JWT_REFRESH_SECRET=94012DJQKZDQ20123
