--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@asyncapi/generator": "^1.9.13",
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "@nestjs/bull": "^0.6.2",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -38,6 +39,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/websockets": "^9.2.0",
+    "@socket.io/redis-adapter": "^7.2.0",
     "aws-sdk": "^2.1258.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.1",
@@ -52,12 +54,12 @@
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.3",
-    "winston": "^3.8.2",
-    "@nestjs/cli": "^9.0.0"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.3",
