chore: move docker config to .docker folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   api:
     build: 
       context: .
-      dockerfile: ./docker/DockerFile-nest
+      dockerfile: ./.docker/DockerFile-nest
     tty: true
     container_name: api
     ports:
