--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.3",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-cloudwatch": "^6.1.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.3",
