--- a/docker/DockerFile-nginx
+++ b/docker/DockerFile-nginx
@@ -6,6 +6,6 @@ RUN set -ex && \
     apk add --no-cache bash && \
     chmod +x /entrypoint-nginx.sh
 
-COPY ./docker/vhost.template /etc/nginx/conf.d/vhost.template
+COPY ./docker/vhost-template /etc/nginx/conf.d/vhost.template
 
 CMD ["/entrypoint-nginx.sh"]
