--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
 services:
   api:
-    build: 
+    container_name: api-nest
+    build:
       context: .
       dockerfile: ./docker/DockerFile-nest
     tty: true
-    container_name: api
     ports:
       - 3000:${API_PORT}
     env_file: .env
-
   # nginx:
-  #   build:
-  #     context: ./docker
-  #     dockerfile: DockerFile-nginx
-  #   tty: true
   #   container_name: nginx
+  #   build:
+  #     context: .
+  #     dockerfile: ./docker/DockerFile-nginx
+  #   tty: true
   #   depends_on:
   #     - api
   #   environment:
@@ -24,4 +23,3 @@ services:
   #     - NGINX_MAX_BODY=${NGINX_MAX_BODY}
   #   ports:
   #     - 80:80
-  #   env_file: .env
