--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -11,5 +11,5 @@ RUN npm install
 
 RUN npm run build
 
-# ENTRYPOINT ["tail", "-f", "/dev/null"]
-CMD ["npm", "run", "start"]
+ENTRYPOINT ["tail", "-f", "/dev/null"]
+CMD ["docker/run.sh"]
