--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -7,9 +7,10 @@ RUN mkdir api²
 COPY . ./api
 WORKDIR /api
 
-RUN npm install
+RUN npm install --global --force yarn
+RUN yarn
 
 RUN npm run build
 
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
 CMD ["docker/run.sh"]
