--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -29,7 +29,7 @@ jobs:
         env:
           RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
         with:
-          envs: TAG_VERSION
+          envs: DATABASE_URL,GOOGLE_MAPS_API_KEY,REDIS_PORT,REDIS_HOST,AWS_ACCESS_KEY,AWS_KEY_SECRET
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
