--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -28,4 +28,4 @@ RUN yarn
 RUN npm run build
 
 # ENTRYPOINT ["tail", "-f", "/dev/null"]
-CMD ["node", "dist/src/main"]
+CMD ["./api/.docker/run.sh"]
