--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -23,7 +23,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: cd ./midi-friendly-api && bash ./deploy.sh
+          script: cd ./midi-friendly-api && bash ./build-env.sh
       - name: Build image & deploy
         uses: appleboy/ssh-action@master
         env:
