--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -24,13 +24,13 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: cd ./midi-friendly-api && bash ./build-env.sh
-      - name: Build image & deploy
-        uses: appleboy/ssh-action@master
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-        with:
-          envs: RELEASE_VERSION
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          script: cd ./midi-friendly-api && bash ./deploy.sh
+      # - name: Build image & deploy
+      #   uses: appleboy/ssh-action@master
+      #   env:
+      #     RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+      #   with:
+      #     envs: RELEASE_VERSION
+      #     host: ${{ secrets.SSH_HOST }}
+      #     username: ${{ secrets.SSH_USERNAME }}
+      #     password: ${{ secrets.SSH_PASSWORD }}
+      #     script: cd ./midi-friendly-api && bash ./deploy.sh
