feat: pull targetted v. of build-env before triggering script

--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -12,6 +12,7 @@ jobs:
       - name: Build up-to-date .env config
         uses: appleboy/ssh-action@master
         env:
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
           REDIS_PORT: ${{ secrets.REDIS_PORT }}
@@ -19,11 +20,18 @@ jobs:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_KEY_SECRET: ${{ secrets.AWS_KEY_SECRET }}
         with:
-          envs: DATABASE_URL,GOOGLE_MAPS_API_KEY,REDIS_PORT,REDIS_HOST,AWS_ACCESS_KEY,AWS_KEY_SECRET
+          envs: RELEASE_VERSION,DATABASE_URL,GOOGLE_MAPS_API_KEY,REDIS_PORT,REDIS_HOST,AWS_ACCESS_KEY,AWS_KEY_SECRET
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: cd ./midi-friendly-api && bash ./build-env.sh $DATABASE_URL $GOOGLE_MAPS_API_KEY $REDIS_HOST $REDIS_PORT $AWS_ACCESS_KEY $AWS_KEY_SECRET
+          script: |
+            echo "Building API .env for $RELEASE_VERSION"
+            cd ./midi-friendly-api
+            git fetch --all
+            git pull
+            git checkout $RELEASE_VERSION
+            git pull
+            bash ./build-env.sh $DATABASE_URL $GOOGLE_MAPS_API_KEY $REDIS_HOST $REDIS_PORT $AWS_ACCESS_KEY $AWS_KEY_SECRET
       # - name: Build image & deploy
       #   uses: appleboy/ssh-action@master
       #   env:
