--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "emails": "cp -r emails dist/",
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && npm run emails ",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run emails && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -25,7 +26,7 @@
   "dependencies": {
     "@asyncapi/generator": "^1.9.13",
     "@googlemaps/google-maps-services-js": "^3.3.16",
-    "@maizzle/framework": "^4.4.0-beta.5",
+    "@maizzle/framework": "next",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
@@ -46,8 +47,11 @@
     "bull": "^4.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "front-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "markdown-it-attrs": "^4.1.6",
     "mongoose": "^6.7.2",
     "nest-aws-sdk": "^3.0.0",
     "nest-winston": "^1.8.0",
