--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -54,8 +54,8 @@ jobs:
             NEST_PORT=3000
             NGINX_MAX_BODY=100M
 
-            AWS_ACCESS_KEY=$AWS_ACCESS_KEY
-            AWS_KEY_SECRET=$AWS_KEY_SECRET
+            AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY
+            AWS_SECRET_ACCESS_KEY=$AWS_KEY_SECRET
 
             AWS_SES_SOURCE_EMAIL=TASTIA<pro.tastia@gmail.com>
             AWS_SES_REGION=eu-central-1
