--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -31,6 +31,7 @@ RUN npm install
 RUN npm run build
 RUN npm run emails
 
+RUN ["chmod", "+x", "run.sh"]
 # ENTRYPOINT ["tail", "-f", "/dev/null"]
 # ENTRYPOINT ["npm", "run", "start:prod", "&", "npm", "run", "worker:prod", "&"]
 CMD ./run.sh
