hotfix: oatcg CI env. assignment

--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -27,6 +27,9 @@ WORKDIR /api
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
+ARG PUPPETEER_SKIP_DOWNLOAD=1
+ENV PUPPETEER_SKIP_DOWNLOAD=${PUPPETEER_SKIP_DOWNLOAD}
+
 RUN npm install 
 RUN npm run build
 RUN npm run emails
