--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -40,8 +40,8 @@ jobs:
             API_PORT=3333
             API_URL=http://localhost
 
-            REDIS_PORT=localhost
-            REDIS_HOST=6379
+            REDIS_PORT=6379
+            REDIS_HOST=localhost
 
             JWT_SECRET=1839DJJQZSZ091203
             JWT_REFRESH_SECRET=94012DJQKZDQ20123
