--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -41,7 +41,7 @@ jobs:
             API_URL=http://localhost
 
             REDIS_PORT=6379
-            REDIS_HOST=localhost
+            REDIS_HOST=0.0.0.0
 
             JWT_SECRET=1839DJJQZSZ091203
             JWT_REFRESH_SECRET=94012DJQKZDQ20123
@@ -59,6 +59,8 @@ jobs:
 
             AWS_SES_SOURCE_EMAIL=TASTIA<pro.tastia@gmail.com>
             AWS_SES_REGION=eu-central-1
+            AWS_REGION=eu-central-1
+
 
             AWS_CLOUDWATCH_API_GROUP_NAME=midi-friendly-api
             AWS_CLOUDWATCH_WORKER_GROUP_NAME=midi-friendly-worker
