--- a/.docker/DockerFile-nest
+++ b/.docker/DockerFile-nest
@@ -1,4 +1,4 @@
-FROM node:16-alpine3.15
+FROM node:16
 
 ENV NODE_OPTIONS=--max_old_space_size=2048
 
@@ -6,6 +6,10 @@ ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
 RUN mkdir api
+
+RUN apt-get update
+RUN apt-get install -y redis
+RUN redis-cli --version
 
 # files needed
 COPY .env ./api
