--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nest build ",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "npm run emails && nest start --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@asyncapi/generator": "^1.9.13",
     "@aws-sdk/client-ses": "^3.234.0",
-    "@chronicstone/mongoose-search": "^1.0.1",
+    "@chronicstone/mongoose-search": "^1.0.5",
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "@maizzle/framework": "next",
     "@nestjs/bull": "^0.6.2",
@@ -56,6 +56,8 @@
     "jsonwebtoken": "^8.5.1",
     "markdown-it-attrs": "^4.1.6",
     "mongoose": "^6.7.2",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-paginate-v2": "^1.4.2",
     "nest-winston": "^1.8.0",
     "nestjs-asyncapi": "^0.3.6",
     "p-queue": "^7.3.0",
@@ -76,6 +78,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/mongoose-paginate-v2": "^1.4.3",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
